// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author should render Default 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-6 emotion-7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-16"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-26"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-6 emotion-7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-16"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-26"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-6 emotion-7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-13"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-15"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-16"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-17"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-18"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-26"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithError 1`] = `<DocumentFragment />`;

exports[`Author should render WithLoading 1`] = `<DocumentFragment />`;

exports[`Author should render WithoutBio 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-6 emotion-7"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-8"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-11 emotion-12"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      />
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <aside
      class="emotion-4 emotion-5"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-6"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-6"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-6"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-9 emotion-10"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-11"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-12"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-14"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-15"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-15"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-15"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-15"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-16"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-24"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
    </header>
    <img
      alt="DSC07717"
      class="emotion-3 emotion-4"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="emotion-5 emotion-6"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-7"
        href="https://twitter.com"
        target="__blank"
        title="Twitter"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-7"
        href="https://facebook.com"
        target="__blank"
        title="Facebook"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"
          />
        </svg>
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-7"
        href="https://instagram.com"
        target="__blank"
        title="Instagram"
      >
        <svg
          fill="currentColor"
          height="22"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 448 512"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
          />
        </svg>
      </a>
    </aside>
    <div
      class="emotion-10 emotion-11"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-12"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-14"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-15"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-16"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-16"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-16"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-16"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-25"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author should render WithoutLinks 1`] = `
<DocumentFragment>
  <article
    class="emotion-0 emotion-1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 emotion-2"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 emotion-3"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="emotion-4 emotion-5"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <div
      class="emotion-6 emotion-7"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom emotion-8"
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Title
              </span>
            </span>
          </h2>
          <hr />
        </div>
        <h3
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom emotion-9"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom emotion-10"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <table
          class="emotion-11"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-12"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-12"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="emotion-12"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="emotion-12"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-13"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
